chore: migrate volta deployments

--- a/.gitignore
+++ b/.gitignore
@@ -68,5 +68,12 @@ tsconfig.tsbuildinfo
 
 .dev.vars
 
-deployments/localhost/*
+deployments/*
 !deployments/localhost/.chainId
+!deployments/volta/.chainId
+!deployments/volta/BaseRegistrarImplementation.json
+!deployments/volta/ENSRegistry.json
+!deployments/volta/ETHRegistrarController.json
+!deployments/volta/PublicResolver.json
+!deployments/volta/ReverseRegistrar.json
+!deployments/volta/UniversalResolver.json
