--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "generate:sitemaps": "node ./scripts/generate-site-map.mjs",
     "enode": "ganache --wallet.mnemonic=\"test test test test test test test test test test test junk\" --chain.chainId 1337 --chain.networkId 1337 --chain.time 1659500634000",
     "compose": "cp ./node_modules/@ensdomains/ens-test-env/src/docker-compose.yml ./docker-compose.yml",
-    "node:hardhat": "npx hardhat --network hardhat node --tags setupEthTld,UniversalResolver,Multicall,getContractAddresses"
+    "node:hardhat": "npx hardhat --network hardhat node --tags setupEthTld,UniversalResolver,Multicall,getContractAddresses",
+    "deploy:volta": "npx hardhat --network volta deploy --tags setupEthTld,UniversalResolver,Multicall,getContractAddresses"
   },
   "dependencies": {
     "@ensdomains/address-encoder": "^0.2.21",
