--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "enode": "ganache --wallet.mnemonic=\"test test test test test test test test test test test junk\" --chain.chainId 1337 --chain.networkId 1337 --chain.time 1659500634000",
     "compose": "cp ./node_modules/@ensdomains/ens-test-env/src/docker-compose.yml ./docker-compose.yml",
     "node:hardhat": "npx hardhat --network hardhat node --tags setupEthTld,UniversalResolver,Multicall,getContractAddresses",
-    "deploy:volta": "npx hardhat --network volta deploy --tags setupEthTld,UniversalResolver,Multicall,getContractAddresses"
+    "deploy:volta": "npx hardhat --network volta deploy --tags NameWrapper,UniversalResolver,Multicall,getContractAddresses"
   },
   "dependencies": {
     "@ensdomains/address-encoder": "^0.2.21",
