--- a/.github/workflows/pages-deployment.yaml
+++ b/.github/workflows/pages-deployment.yaml
@@ -1,30 +1,30 @@
-name: Cloudflare Pages
+# name: Cloudflare Pages
 
-env:
-  SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
-  NEXT_PUBLIC_INTERCOM_ID: re9q5yti
+# env:
+#   SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+#   NEXT_PUBLIC_INTERCOM_ID: re9q5yti
 
 on: [push]
 jobs:
-  yalc_check:
-    runs-on: ubuntu-latest
-    outputs:
-      can_deploy: ${{ steps.has_yalc.conclusion == 'success' }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Install Yalc
-        run: npm i -g yalc
-
-      - id: has_yalc
-        run: |
-          ! yalc check | grep -qe .
+  # yalc_check:
+  #   runs-on: ubuntu-latest
+  #   outputs:
+  #     can_deploy: ${{ steps.has_yalc.conclusion == 'success' }}
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v3
+  #
+  #     - name: Install Yalc
+  #       run: npm i -g yalc
+  #
+  #     - id: has_yalc
+  #       run: |
+  #         ! yalc check | grep -qe .
 
   deploy:
     if: ${{ always() }}
     runs-on: ubuntu-latest
-    needs: [yalc_check]
+    # needs: [yalc_check]
     permissions:
       contents: read
       deployments: write
@@ -32,9 +32,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Check Yalc
-        if: ${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev' }}
-        run: if [ ${{ needs.yalc_check.outputs.can_deploy }} != true ]; then exit 1; else exit 0; fi
+      # - name: Check Yalc
+      #   if: ${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev' }}
+      #   run: if [ ${{ needs.yalc_check.outputs.can_deploy }} != true ]; then exit 1; else exit 0; fi
 
       - uses: pnpm/action-setup@v2.2.2
         with:
@@ -43,18 +43,18 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 18
           cache: 'pnpm'
 
       - run: pnpm install --frozen-lockfile
 
       - name: Build and Export
-        if: ${{ github.ref == 'refs/heads/main' }}
+        if: ${{ github.ref == 'refs/heads/develop' }}
         run: pnpm build && pnpm export
 
-      - name: Build and Export with Profiler
-        if: ${{ github.ref != 'refs/heads/main' }}
-        run: pnpm build:preview && pnpm export
+      # - name: Build and Export with Profiler
+      #   if: ${{ github.ref != 'refs/heads/main' }}
+      #   run: pnpm build:preview && pnpm export
 
       - name: Generate sitemap
         if: ${{ github.ref == 'refs/heads/main' }}
@@ -62,15 +62,15 @@ jobs:
           mkdir -p ./out/sitemaps
           pnpm generate:sitemaps
 
-      - name: Publish
-        uses: cloudflare/pages-action@v1
-        with:
-          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          projectName: ens-app-v3
-          directory: out
-          gitHubToken: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Publish
+      #   uses: cloudflare/pages-action@v1
+      #   with:
+      #     apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+      #     accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+      #     projectName: ens-app-v3
+      #     directory: out
+      #     gitHubToken: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Submit sitemap
-        if: ${{ github.ref == 'refs/heads/main' }}
-        run: curl https://www.google.com/ping\?sitemap=https://app.ens.domains/sitemap.xml
+      # - name: Submit sitemap
+      #   if: ${{ github.ref == 'refs/heads/main' }}
+      #   run: curl https://www.google.com/ping\?sitemap=https://app.ens.domains/sitemap.xml
